--- a/public/assets/css/view.css
+++ b/public/assets/css/view.css
@@ -1,3 +1,50 @@
 .none {
     display: none;
 }
+
+.btn-buy {
+    height: 34px;
+    width: 60px;
+    line-height: 20px;
+    /*overflow: hidden;
+    -webkit-backface-visibility: hidden;
+    -moz-backface-visibility: hidden;
+    backface-visibility: hidden;*/
+}
+
+.btn-buy span {
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+    -webkit-transition: all 0.3s;
+    -webkit-backface-visibility: hidden;
+    -moz-transition: all 0.3s;
+    -moz-backface-visibility: hidden;
+    transition: all 0.3s;
+    /*backface-visibility: hidden;*/
+}
+.btn-5:active {
+    top: 2px;
+}
+
+.btn-buy:before {
+    content: url('../images/cart.png');
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    line-height: 2.5;
+    -webkit-transition: all 0.3s;
+    -moz-transition: all 0.3s;
+    transition: all 0.3s;
+}
+
+
+.btn-buy:before {
+    left: -100%;
+    top: 0;
+}
+
+
+/*.btn-buy:hover:before {
+    left: 0;
+}*/
